Fix blockquote text color in dark mode

--- a/src/css/additional-styles/utility-patterns.css
+++ b/src/css/additional-styles/utility-patterns.css
@@ -97,4 +97,9 @@
         scrollbar-width: none;
         /* Firefox */
     }
+
+    /* override blockquote defaults for posts */
+    .prose :where(blockquote):not(:where([class~="not-prose"] *)) {
+       @apply text-slate-500 dark:text-slate-400
+    }
 }
